config/envoy.yaml
node:
  cluster: ecdsdemo
  id: ecdsdemo

admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901

# dynamic_resources:
#   ads_config:
#     #api_type: DELTA_GRPC
#     api_type: GRPC
#     transport_api_version: V3
#     grpc_services:
#     - envoy_grpc:
#         cluster_name: xds-cluster
#     set_node_on_first_message_only: true
#     rate_limit_settings:
#       max_tokens: 10
#       fill_rate: .1
#   cds_config:
#     resource_api_version: V3
#     ads: {}
#   lds_config:
#     resource_api_version: V3
#     ads: {}

static_resources:
  listeners:
  - name: apim
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          route_config:
            name: local_route
            virtual_hosts:
            - name: www
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: target
                  auto_host_rewrite: true

          http_filters:
          - name: envoy.filters.http.jwt_authn
            config_discovery:
              config_source: 
                api_config_source: 
                  api_type: GRPC
                  grpc_services: 
                    - envoy_grpc: 
                        cluster_name: xds-cluster
                  transport_api_version: V3
                initial_fetch_timeout: 30s
                resource_api_version: V3
              type_urls: 
              - type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - connect_timeout: 10s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: target
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: www.axway.com
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: www.axway.com
    http2_protocol_options: {}
    name: target
  - connect_timeout: 1s
    type: LOGICAL_DNS
    load_assignment:
      cluster_name: xds-cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 10000
    http2_protocol_options: {}
    name: xds-cluster
  - name: jwks_cluster
    connect_timeout: 2s
    type: STRICT_DNS
    load_assignment:
      cluster_name: jwks_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: dev-94945820.okta.com
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typedConfig:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          validation_context:
            trusted_ca:
              filename: /etc/ssl/certs/ca-certificates.crt
        sni: "dev-94945820.okta.com"
